engine/src/snapshots/engine__board__tests__test_capture_with_pawn.snap
---
source: engine/src/board.rs
expression: options
---
[
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 5,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 5,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 5,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 6,
            x: 4,
        },
        action: Capture {
            enemy: Piece {
                piece_type: Bishop,
                side: Black,
            },
            pos: Position {
                y: 6,
                x: 4,
            },
        },
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 4,
            x: 5,
        },
        action: Capture {
            enemy: Piece {
                piece_type: Queen,
                side: Black,
            },
            pos: Position {
                y: 4,
                x: 5,
            },
        },
    },
]
