engine/src/snapshots/engine__board__tests__test_move_all_black_pawns.snap
---
source: engine/src/board.rs
expression: options
---
[
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 1,
            x: 10,
        },
        destination: Position {
            y: 1,
            x: 9,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 1,
            x: 10,
        },
        destination: Position {
            y: 1,
            x: 9,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 1,
            x: 10,
        },
        destination: Position {
            y: 1,
            x: 8,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 2,
            x: 9,
        },
        destination: Position {
            y: 2,
            x: 8,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 2,
            x: 9,
        },
        destination: Position {
            y: 2,
            x: 8,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 2,
            x: 9,
        },
        destination: Position {
            y: 2,
            x: 7,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 3,
            x: 8,
        },
        destination: Position {
            y: 3,
            x: 7,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 3,
            x: 8,
        },
        destination: Position {
            y: 3,
            x: 7,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 3,
            x: 8,
        },
        destination: Position {
            y: 3,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 4,
            x: 7,
        },
        destination: Position {
            y: 4,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 4,
            x: 7,
        },
        destination: Position {
            y: 4,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 4,
            x: 7,
        },
        destination: Position {
            y: 4,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 6,
        },
        destination: Position {
            y: 5,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 6,
        },
        destination: Position {
            y: 5,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 6,
            x: 6,
        },
        destination: Position {
            y: 6,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 6,
            x: 6,
        },
        destination: Position {
            y: 6,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 6,
            x: 6,
        },
        destination: Position {
            y: 6,
            x: 4,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 7,
            x: 6,
        },
        destination: Position {
            y: 7,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 7,
            x: 6,
        },
        destination: Position {
            y: 7,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 7,
            x: 6,
        },
        destination: Position {
            y: 7,
            x: 4,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 8,
            x: 6,
        },
        destination: Position {
            y: 8,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 8,
            x: 6,
        },
        destination: Position {
            y: 8,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 8,
            x: 6,
        },
        destination: Position {
            y: 8,
            x: 4,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 9,
            x: 6,
        },
        destination: Position {
            y: 9,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 9,
            x: 6,
        },
        destination: Position {
            y: 9,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 9,
            x: 6,
        },
        destination: Position {
            y: 9,
            x: 4,
        },
        action: Move,
    },
]
