engine/src/snapshots/engine__board__tests__test_move_all_white_pawns.snap
---
source: engine/src/board.rs
expression: options
---
[
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 1,
            x: 4,
        },
        destination: Position {
            y: 1,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 1,
            x: 4,
        },
        destination: Position {
            y: 1,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 2,
            x: 4,
        },
        destination: Position {
            y: 2,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 2,
            x: 4,
        },
        destination: Position {
            y: 2,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 3,
            x: 4,
        },
        destination: Position {
            y: 3,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 3,
            x: 4,
        },
        destination: Position {
            y: 3,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 4,
            x: 4,
        },
        destination: Position {
            y: 4,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 4,
            x: 4,
        },
        destination: Position {
            y: 4,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 5,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 5,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 6,
            x: 3,
        },
        destination: Position {
            y: 6,
            x: 4,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 6,
            x: 3,
        },
        destination: Position {
            y: 6,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 7,
            x: 2,
        },
        destination: Position {
            y: 7,
            x: 3,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 7,
            x: 2,
        },
        destination: Position {
            y: 7,
            x: 4,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 8,
            x: 1,
        },
        destination: Position {
            y: 8,
            x: 2,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 8,
            x: 1,
        },
        destination: Position {
            y: 8,
            x: 3,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 9,
            x: 0,
        },
        destination: Position {
            y: 9,
            x: 1,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 9,
            x: 0,
        },
        destination: Position {
            y: 9,
            x: 2,
        },
        action: Move,
    },
]
