engine/src/snapshots/engine__board__tests__test_move_bishop.snap
---
source: engine/src/board.rs
expression: options
---
[
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 6,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 7,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 8,
            x: 7,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 4,
            x: 3,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 3,
            x: 2,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 4,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 3,
            x: 8,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 2,
            x: 10,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 6,
            x: 2,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 7,
            x: 0,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 7,
            x: 3,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 9,
            x: 2,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 3,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Bishop,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 1,
            x: 6,
        },
        action: Move,
    },
]
