engine/src/snapshots/engine__board__tests__test_move_knight.snap
---
source: engine/src/board.rs
expression: options
---
[
    GameMove {
        piece: Piece {
            piece_type: Knight,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 7,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Knight,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 6,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Knight,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 8,
            x: 3,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Knight,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 8,
            x: 2,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Knight,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 6,
            x: 1,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Knight,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 7,
            x: 1,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Knight,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 3,
            x: 3,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Knight,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 4,
            x: 2,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Knight,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 2,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Knight,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 2,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Knight,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 4,
            x: 7,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Knight,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 3,
            x: 7,
        },
        action: Move,
    },
]
