engine/src/snapshots/engine__board__tests__test_move_pawn_black.snap
---
source: engine/src/board.rs
expression: options
---
[
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 5,
            x: 3,
        },
        action: Move,
    },
]
