engine/src/snapshots/engine__board__tests__test_move_pawn_white.snap
---
source: engine/src/board.rs
expression: options
---
[
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 5,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Pawn,
            side: White,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 5,
            x: 6,
        },
        action: Move,
    },
]
